--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "LineAlphat JS",
   "main": "./library/main.js",
   "scripts": {
-    "start": "npm run bot",
-    "bot": "node ./src/bot.js"
+    "start": "npm run bot1 | npm run bot2 | npm run bot3",
+    "bot1": "node ./src/bot.js",
+    "bot2": "node ./src/bot.js",
+    "bot3": "node ./src/bot.js"
   },
   "repository": {
     "type": "git",
