--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "./library/main.js",
   "scripts": {
     "start": "npm run bot1 | npm run bot2 | npm run bot3",
-    "bot1": "node ./src/bot.js",
-    "bot2": "node ./src/bot.js",
-    "bot3": "node ./src/bot.js"
+    "bot1": "node ./src/bot1.js",
+    "bot2": "node ./src/bot2.js",
+    "bot3": "node ./src/bot3.js"
   },
   "repository": {
     "type": "git",
